fix: input "jumping out" of the table when editing a cell value

--- a/src/components/Main/SeverityTable.scss
+++ b/src/components/Main/SeverityTable.scss
@@ -17,3 +17,8 @@
   //max-width: 30px !important;
   min-width: 100px !important;
 }
+
+.table-cell-input {
+  border: none;
+  outline: none;
+}
